--- a/feathers-question-answer-chat/package.json
+++ b/feathers-question-answer-chat/package.json
@@ -50,6 +50,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "feathers-hooks-common": "^5.0.3",
     "feathers-mongoose": "^8.3.1",
     "helmet": "^3.23.3",
     "mongodb-core": "^3.2.7",
