--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.11.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "feathers-hooks-common": "^5.0.3",
     "material-ui": "^0.20.2",
     "moment": "^2.17.1",
     "prop-types": "^15.7.2",
