--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "@material-ui/core": "^4.11.0",
     "antd": "^4.5.3",
     "axios": "^0.19.2",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.5.2",
     "feathers-hooks-common": "^5.0.3",
+    "lodash": "^4.17.19",
     "material-ui": "^0.20.2",
     "moment": "^2.17.1",
     "prop-types": "^15.7.2",
-    "react": "^15.4.2",
+    "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^15.4.2",
+    "react-dom": "^16.13.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "semantic-ui-css": "^2.4.1",
