--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^5.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.1.1",
-    "socket.io-client": "^1.7.3"
+    "socket.io-client": "^1.7.3",
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "react-scripts": "0.9.3"
