--- a/feathers-question-answer-chat/package.json
+++ b/feathers-question-answer-chat/package.json
@@ -56,6 +56,7 @@
     "mongodb-core": "^3.2.7",
     "mongoose": "^5.9.27",
     "mongoose-type-email": "^1.0.12",
+    "node-fetch": "^2.6.0",
     "serve-favicon": "^2.5.0",
     "winston": "^3.3.3"
   },
