--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "@feathersjs/client": "^3.4.4",
+    "@feathersjs/rest-client": "^4.5.8",
     "@material-ui/core": "^4.11.0",
     "antd": "^4.5.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.2",
+    "c3": "^0.7.20",
     "feathers-hooks-common": "^5.0.3",
+    "jquery": "^3.5.1",
     "lodash": "^4.17.19",
     "material-ui": "^0.20.2",
     "moment": "^2.17.1",
