--- a/feathers-question-answer-chat/package.json
+++ b/feathers-question-answer-chat/package.json
@@ -53,6 +53,7 @@
     "feathers-hooks-common": "^5.0.3",
     "feathers-mongoose": "^8.3.1",
     "helmet": "^3.23.3",
+    "initials-avatar": "^1.3.1",
     "mongodb-core": "^3.2.7",
     "mongoose": "^5.9.27",
     "mongoose-type-email": "^1.0.12",
