--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "react-dom": "^16.13.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.1.1",
     "socket.io-client": "^1.7.3",
     "update": "^0.7.4"
   },
-  "devDependencies": {    
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
